fixes java 1.8