@@ -39,7 +39,7 @@ public class TaskManagerApplication implements CommandLineRunner {
 			role1.setId(AppConstants.NORMAL_USER);
 			role1.setName("ROLE_NORMAL");
 
-			List<Role> roles = Arrays.asList(role, role1);
+			List<Role> roles = List.of(role, role1);
 
 			List<Role> result=this.roleRepo.saveAll(roles);
 			result.forEach(r->{
